// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CheckBoxGroup custom theme 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 kiEDjE"
>
  <div
    class="StyledBox-sc-13pk1d4-0 fLpEDL StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fWaykw"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jDgzUY StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 exHNbK"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 ldnIiP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cBFYon"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cYYcla"
    />
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fWaykw"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jDgzUY StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 exHNbK"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 ldnIiP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cBFYon"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup defaultValue renders 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iRGypN"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
      role="group"
    >
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bEcYFJ"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
        >
          <input
            checked=""
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 kujSId StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 njlQF"
          >
            <svg
              class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 dBUHcL"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          First
        </span>
      </label>
      <label
        class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
        >
          <input
            class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
            type="checkbox"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
          />
        </div>
        <span>
          Second
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckBoxGroup disabled renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ivpuDO"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 FbpgY"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 lgUAUU"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ivpuDO"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 FbpgY"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 lgUAUU"
          disabled=""
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ivpuDO"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 FbpgY"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 lgUAUU"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
  <div
    class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 ivpuDO"
      disabled=""
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
        disabled=""
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 FbpgY"
          disabled=""
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 lgUAUU"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup initial value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        Maui
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bEcYFJ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 kujSId StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 njlQF"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 dBUHcL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Jerusalem
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bEcYFJ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 kujSId StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 njlQF"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 dBUHcL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Wuhan
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup labelKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onChange 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bEcYFJ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 kujSId StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 njlQF"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 dBUHcL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledBox-sc-13pk1d4-0 lktpCf StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bEcYFJ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 kujSId StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 njlQF"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 dBUHcL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledBox-sc-13pk1d4-0 lktpCf StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
    tabindex="0"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup options renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        First
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup renders without grommet wrapper 1`] = `
<div
  class="StyledBox-sc-13pk1d4-0 fDLUqh StyledCheckBoxGroup-sc-2nhc5d-0"
  role="group"
>
  <label
    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fWaykw"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jDgzUY StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
    >
      <input
        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 exHNbK"
        type="checkbox"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 ldnIiP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cBFYon"
      />
    </div>
    <span>
      First
    </span>
  </label>
  <div
    class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hrJqFx"
  />
  <label
    class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 fWaykw"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jDgzUY StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
    >
      <input
        class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 exHNbK"
        type="checkbox"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 ldnIiP StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cBFYon"
      />
    </div>
    <span>
      Second
    </span>
  </label>
</div>
`;

exports[`CheckBoxGroup value renders 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bEcYFJ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          checked=""
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 kujSId StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 njlQF"
        >
          <svg
            class="StyledCheckBox__StyledCheckBoxIcon-sc-1dbk5ju-0 dBUHcL"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        First
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup valueKey 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iRGypN"
>
  <div
    class="StyledBox-sc-13pk1d4-0 dIENLv StyledCheckBoxGroup-sc-2nhc5d-0"
    role="group"
  >
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <label
      class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 cLXOvL"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 bDSdwN StyledCheckBox-sc-1dbk5ju-6 gAgPcH"
      >
        <input
          class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 dufPrM"
          type="checkbox"
        />
        <div
          class="StyledBox-sc-13pk1d4-0 HLaUt StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cNvmsw"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;
